Bug 309222 - Nepomuk crash after login
Summary: Nepomuk crash after login
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Miscellaneous
Component: general (show other bugs)
Version: git master
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Nepomuk Bugs Coordination
URL:
Keywords:
: 309483 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-10-29 21:58 UTC by Jan Binder
Modified: 2012-11-06 04:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Binder 2012-10-29 21:58:51 UTC
Application: nepomukservicestub (0.1.0)
KDE Platform Version: 4.9.80 (Compiled from sources)
Qt Version: 4.8.2
Operating System: Linux 3.6.1-exp-2 x86_64
Distribution: Debian GNU/Linux unstable (sid)

-- Information about the crash:
- What I was doing when the application crashed:

I had just logged in and Kontact had started automatically when the Nepomuk service crashed.

-- Backtrace:
Application: Nepomuk-Dienst (nepomukservicestub), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[KCrash Handler]
#6  0x00007f3b3de56475 in raise () from /lib/x86_64-linux-gnu/libc.so.6
#7  0x00007f3b3de596f0 in abort () from /lib/x86_64-linux-gnu/libc.so.6
#8  0x00007f3b40f66722 in qt_message_output (msgType=msgType@entry=QtFatalMsg, buf=0x148cd28 "ASSERT: \"!isEmpty()\" in file /usr/include/qt4/QtCore/qlist.h, line 282") at global/qglobal.cpp:2284
#9  0x00007f3b40f66a98 in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=msgType@entry=QtFatalMsg, msg=0x7f3b410ce528 "ASSERT: \"%s\" in file %s, line %d", ap=ap@entry=0x7fff3f0078f8) at global/qglobal.cpp:2330
#10 0x00007f3b40f66c24 in qFatal (msg=<optimized out>) at global/qglobal.cpp:2513
#11 0x00007f3b2e8106e9 in QList<QUrl>::first (this=this@entry=0x13f3dd8) at /usr/include/qt4/QtCore/qlist.h:282
#12 0x00007f3b2e81072c in QList<QUrl>::takeFirst (this=this@entry=0x13f3dd8) at /usr/include/qt4/QtCore/qlist.h:490
#13 0x00007f3b2e810769 in QQueue<QUrl>::dequeue (this=this@entry=0x13f3dd8) at /usr/include/qt4/QtCore/qqueue.h:61
#14 0x00007f3b2e8100c8 in Nepomuk2::FileIndexingQueue::processNextIteration (this=0x13f3dc0) at /media/wares/kdesrc/kde/kdelibs/nepomuk-core/services/fileindexer/fileindexingqueue.cpp:58
#15 0x00007f3b2e80e226 in Nepomuk2::IndexingQueue::processNext (this=0x13f3dc0) at /media/wares/kdesrc/kde/kdelibs/nepomuk-core/services/fileindexer/indexingqueue.cpp:42
#16 0x00007f3b41080a2e in QObject::event (this=0x13f3dc0, e=<optimized out>) at kernel/qobject.cpp:1195
#17 0x00007f3b3ed8270c in QApplicationPrivate::notify_helper (this=this@entry=0x115afe0, receiver=receiver@entry=0x13f3dc0, e=e@entry=0x14892e0) at kernel/qapplication.cpp:4556
#18 0x00007f3b3ed86b8a in QApplication::notify (this=0x7fff3f0085d0, receiver=0x13f3dc0, e=0x14892e0) at kernel/qapplication.cpp:4417
#19 0x00007f3b400dbcfe in KApplication::notify (this=0x7fff3f0085d0, receiver=0x13f3dc0, event=0x14892e0) at /media/wares/kdesrc/kde/kdelibs/kdeui/kernel/kapplication.cpp:311
#20 0x00007f3b4106bb5e in QCoreApplication::notifyInternal (this=0x7fff3f0085d0, receiver=receiver@entry=0x13f3dc0, event=event@entry=0x14892e0) at kernel/qcoreapplication.cpp:915
#21 0x00007f3b4106f9e1 in sendEvent (event=0x14892e0, receiver=0x13f3dc0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#22 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x11272c0) at kernel/qcoreapplication.cpp:1539
#23 0x00007f3b4109a0e3 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#24 postEventSourceDispatch (s=0x114e5e0) at kernel/qeventdispatcher_glib.cpp:279
#25 0x00007f3b3d5533b5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f3b3d5536e8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f3b3d5537a4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007f3b4109a276 in QEventDispatcherGlib::processEvents (this=0x112c720, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#29 0x00007f3b3ee2383e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#30 0x00007f3b4106a8af in QEventLoop::processEvents (this=this@entry=0x7fff3f008360, flags=...) at kernel/qeventloop.cpp:149
#31 0x00007f3b4106ab38 in QEventLoop::exec (this=0x7fff3f008360, flags=...) at kernel/qeventloop.cpp:204
#32 0x00007f3b4106fcf8 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#33 0x0000000000404494 in main (argc=2, argv=0x7fff3f008778) at /media/wares/kdesrc/kde/kdelibs/nepomuk-core/servicestub/main.cpp:177

Reported using DrKonqi
Comment 1 Vishesh Handa 2012-11-06 04:04:09 UTC
Git commit 48474a1250830ba2ec3a6ad5526380975b1245d9 by Vishesh Handa.
Committed on 02/11/2012 at 04:34.
Pushed by vhanda into branch 'master'.

FileIndexingQueue: Only process the queue if there are some elements

There are some cases when an processNext() gets called even though there
are no more elements. It's better to have an extra check instead of of
crashing.

M  +1    -1    services/fileindexer/indexingqueue.cpp

http://commits.kde.org/nepomuk-core/48474a1250830ba2ec3a6ad5526380975b1245d9
Comment 2 Vishesh Handa 2012-11-06 04:06:26 UTC
*** Bug 309483 has been marked as a duplicate of this bug. ***