FileIndexingQueue: Only process the queue if there are some elements

There are some cases when an processNext() gets called even though there
are no more elements. It's better to have an extra check instead of of
crashing.

BUG: 309222